--- a/monty-hall.tex
+++ b/monty-hall.tex
@@ -91,14 +91,14 @@ Il problema sarebbe diverso se non ci fosse una scelta iniziale, o se il condutt
 \section{Diagrammi di Eulero-Venn}
 La probabilità che l'auto sia dietro la porta restante può essere calcolata con l'ausilio del diagramma di Venn illustrato sotto. Dopo aver scelto la porta 1, per esempio, il giocatore ha probabilità 1/3 di aver selezionato la porta con l'auto, il che assegna una probabilità pari a 2/3 alle due porte restanti. Si osservi che c'è una probabilità pari a 1 di trovare una capra dietro almeno una delle due porte non selezionate dal giocatore, dal momento che c'è una sola auto in palio.
 
-\begin{figure}[h]
+\begin{figure}[htbp]
 	\centering
 	\includegraphics[scale=0.5]{monty1}
 \end{figure}
 
 Si supponga che il conduttore apra la porta 3. Dal momento che può solo aprire una porta che nasconde una capra, e non apre una porta a caso, questa informazione non ha effetto sulla probabilità che l'auto sia dietro la porta originariamente selezionata, che resta pari a 1/3. Ma l'auto non è dietro la porta 3, dunque l'intera probabilità di 2/3 delle due porte non selezionate dal giocatore è ora assegnata alla sola porta 2, come mostrato sotto. Un modo alternativo per arrivare a questa conclusione è osservare che se l'auto si trova dietro la porta 2 o dietro la porta 3, aprire la porta 3 implica che l'auto si trova dietro la 2 e viceversa.
 
-\begin{figure}[h]
+\begin{figure}[htbp]
 	\centering
 	\includegraphics[scale=0.5]{monty2}
 \end{figure}
